--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Load Map Scripts -->
+    <script type="text/javascript" src="/mapdata.js"></script>
+    <script type="text/javascript" src="/countrymap.js"></script>
+
     <title>Gallery Website</title>
   </head>
   <body>
